--- a/first_project/first_project/first_project.vcxproj.filters
+++ b/first_project/first_project/first_project.vcxproj.filters
@@ -18,7 +18,7 @@
     <ClCompile Include="..\..\..\..\..\Downloads\src\glad.c">
       <Filter>Arquivos de Origem</Filter>
     </ClCompile>
-    <ClCompile Include="firstfile.cpp">
+    <ClCompile Include="firstexercisealternate.cpp">
       <Filter>Arquivos de Origem</Filter>
     </ClCompile>
   </ItemGroup>
